--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ea18a883",
+   "id": "7347c80b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fcae3556",
+   "id": "a01c96e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3b167ec3",
+   "id": "bc08ac88",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "acb1aba5",
+   "id": "8e9982f4",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "08e29b57",
+   "id": "16b9bfe0",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b6d13f15",
+   "id": "6c28c631",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ab3662f5",
+   "id": "8df20664",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "59535dec",
+   "id": "9af88ffa",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4dc1da03",
+   "id": "b4dedb5b",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3bb087bb",
+   "id": "79ee4df5",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6534e733",
+   "id": "9a7fb298",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e4847c3c",
+   "id": "b083066c",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "424ed891",
+   "id": "2e15f3c1",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6fd3c316",
+   "id": "e0b20169",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5ea863ad",
+   "id": "7a1d0f70",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ce651934",
+   "id": "7389f25e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "736c8b44",
+   "id": "ca673308",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6e1df346",
+   "id": "bbfdc85c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "cb4bf676",
+   "id": "9c38924c",
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "522ee182",
+   "id": "26dc2798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b9e301b9",
+   "id": "069c5116",
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b0ad0092",
+   "id": "ac4e5f45",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2123f7ae",
+   "id": "b07b2bbc",
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d8434a60",
+   "id": "3e046d1e",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "97830dd1",
+   "id": "4f98977b",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e5143d36",
+   "id": "e0f270ef",
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1dbe8006",
+   "id": "e9b87f7e",
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7368b8b6",
+   "id": "cd37686b",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "843559af",
+   "id": "5d58ba10",
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "9e4b62e4",
+   "id": "4b59343a",
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b71dd6dc",
+   "id": "ed3a5643",
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b8733580",
+   "id": "61e9a770",
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "aa1d19c0",
+   "id": "8c10cacd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "488a61e6",
+   "id": "be6bce85",
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "fea6f3e2",
+   "id": "9f04af0d",
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1399,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "3e7e018b",
+   "id": "1a94fbf0",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6ec3a77b",
+   "id": "924b420e",
    "metadata": {},
    "outputs": [
     {
@@ -1455,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "aff8a913",
+   "id": "97446a26",
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "cfa49bf1",
+   "id": "86e60e75",
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "cc23324e",
+   "id": "4346a70e",
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1566,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "58ab3bd2",
+   "id": "f9e11dab",
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "39ca578a",
+   "id": "531c5b8c",
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1652,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "50ef1709",
+   "id": "7aa3cd76",
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "45180471",
+   "id": "d80d243e",
    "metadata": {},
    "outputs": [
     {
@@ -1702,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "b4bcb4c4",
+   "id": "f06e14bb",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "3589557a",
+   "id": "8b3defac",
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "777b06e0",
+   "id": "4bfcdeb5",
    "metadata": {},
    "outputs": [
     {
@@ -1781,8 +1781,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "id": "f9f88207",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x00000135EE804E08>"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pyber_data_df.groupby([\"type\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b35441b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2375"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pyber_data_df[\"ride_id\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "0f5fa905",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        5.263158\n",
+       "Suburban    26.315789\n",
+       "Urban       68.421053\n",
+       "Name: ride_id, dtype: float64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the percentage of rides for each city type.\n",
+    "ride_percents = 100 * pyber_data_df.groupby([\"type\"]).count()[\"ride_id\"] / pyber_data_df[\"ride_id\"].count()\n",
+    "ride_percents"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e56c4af0",
+   "id": "b034820e",
    "metadata": {},
    "outputs": [],
    "source": []
